fix clipping bug

--- a/iframes/category_lvl2/css/style.css
+++ b/iframes/category_lvl2/css/style.css
@@ -201,8 +201,43 @@ a {
 	background-color: #fff;
 }
 
+.rb-grid li span {
+  /*margin-top: 20px;*/
+  display: block;
+  font-size: 1.3em;
+  font-weight: 700;
+  text-transform: uppercase;
+  opacity: 0.5;
+  /*display: block;*/
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
 
+li:hover span, li:focus span, li:active span {
+  opacity: 1;
+}
 
+li img {
+	height: 100%;
+	background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition: all 0.15s ease-in-out;
+  -moz-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+
+li:hover img, li:focus img, li:active img {
+	-webkit-transform: scale(1.02);
+  -moz-transform: scale(1.02);
+  -o-transform: scale(1.02);
+  transform: scale(1.02);
+}
+*/
 @media screen and (max-width: 63.125em) {
 
 	.rb-grid li,
